--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>index</title>
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css" />
     </head>
     <body>
         <p>index</p>
